# SLIViT

./: .gitignore  MAE_README.md  config.yaml  config_2d.yaml  pyproject.toml  ssl_pretrain.py  ssl_pretrain_2d.py
auxiliaries/: training.py
datasets/: HeidelbergOCTDataset.py  HeidelbergOCTSliceDataset.py
model/: feature_extractor.py  mae.py  mae2d.py
results/mae/: config.yaml
